--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
   },
 
   "scripts": {
-
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
+
   "dependencies": {
-    "next": "^15.1.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "15.5.7",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "@supabase/supabase-js": "^2.49.1",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "xlsx": "^0.18.5",
@@ -25,15 +25,16 @@
     "lucide-react": "^0.476.0",
     "clsx": "^2.1.1"
   },
+
   "devDependencies": {
     "typescript": "^5.6.3",
-    "@types/node": "^22.10.1",
+    "@types/node": "18.19.0",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "tailwindcss": "^3.4.17",
     "postcss": "^8.4.49",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.16.0",
-    "eslint-config-next": "^15.1.0"
+    "eslint-config-next": "15.5.7"
   }
 }
